Fix alignment of footer elements

--- a/src/components/Footer/index.css
+++ b/src/components/Footer/index.css
@@ -16,6 +16,7 @@
 .contact-section {
   display: flex;
   align-items: center;
+  justify-content: flex-end;
   width: 100%;
   height: 100%;
   color: #bbb;
@@ -26,14 +27,22 @@
   margin-right: 7px;
 }
 
+.contact-section div:first-child {
+  margin-left: 0;
+}
+
+.contact-section div:last-child {
+  margin-right: 0;
+}
+
 .contact-section a:hover {
   text-decoration: none;
 }
 
 @media only screen and (max-width: 576px) {
   .contact-section {
-    margin-top: 18px;
-    margin-left: 32px;
+    margin-top: 22px;
     width: auto;
+    justify-content: flex-start;
   }
 }
